--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -23,6 +23,11 @@
         <div class="form-head">
             Employee Payroll Form
         </div>
+        <div class="row-content">
+            <label class="label text" for="name">Name</label>
+            <input class="input" type="text" id="name" name="name"
+                   placeholder="Your name.." required>
+        </div>
     </form>
     </div>
 </body>
