Adding Eventlistener on salary

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payroll_form_css.css">
     <title>Employee payroll form</title>
-    <script defer src="../js/payroll_form_js.js"></script>
+    
 </head>
 <body>
     <header class="header-content header">
@@ -158,4 +158,5 @@
     </form>
     </div>
 </body>
+<script src="../js/payroll_form_js.js"></script>
 </html>
