Adding HomePage Header

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -6,9 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payroll_form_css.css">
     <title>Employee payroll form</title>
-    <script defer src="../js/EmployeePayroll.js"></script>
-    <script defer src="../js/payroll_form_js.js"></script>
-</head>
+   </head>
 <body>
     <header class="header-content header">
         <div class="logo-content">
@@ -153,11 +151,14 @@
         <div class="button-content">
             <a href="./home.html" class=" button cancelButton">Cancel</a>
             <div class="submit-reset">
-                <button type="submit" class="button submitButton" id="submitButton">Submit</button>
+                <button type="submit" class="button submitButton"  id="submitButton">Submit</button>
                 <button type="reset" class="resetButton button">Reset</button>
             </div>
         </div>
     </form>
     </div>
 </body>
+<script src="../js/EmployeePayroll.js"></script>
+<script src="../js/payroll_form_js.js"></script>
+
 </html>
