--- a/pages/home.html
+++ b/pages/home.html
@@ -21,5 +21,14 @@
              </div>
          </div>
      </header>
+     <div class="main-content">
+         <div class="header-content">
+             <div class="emp-detail-text">
+                 Employee Details <div class="emp-count">10</div>
+             </div>
+             <a href="../pages/payroll_form.html" class="add-button">
+              <img src="" alt="">Add User</a>
+         </div>
+     </div>
  </body>
 </html>
