Adding Statically Tabledata

--- a/pages/home.html
+++ b/pages/home.html
@@ -29,6 +29,34 @@
              <a href="../pages/payroll_form.html" class="add-button">
               <img src="" alt="">Add User</a>
          </div>
+         <div class="table-main">
+             <table id="display" class="table">
+                 <tr>
+                     <th></th>
+                     <th>Name</th>
+                     <th>Gender</th>
+                     <th>Department</th>
+                     <th>Salary</th>
+                     <th>Start Date</th>
+                     <th>Actions</th>
+                 </tr>
+                 <tr>
+                     <td><img class="profile" alt="" src="../assets/Ellipse -2.png"></td>
+                     <td>Saket Jain</td>
+                     <td>Male</td>
+                     <td><div class="dept-label">HR</div>
+                          <div class="dept-label">Finance</div></td>
+                     <td>300000</td>
+                     <td>1 April 2021</td> 
+                     <td>
+                         <img id="1" onclick="remove(this)" alt="delete"
+                               src="">
+                         <img id="1" alt="edit" onclick="update(this)"
+                               src="">
+                     </td>               
+                 </tr>
+             </table>
+         </div>
      </div>
  </body>
 </html>
