--- a/pages/home.html
+++ b/pages/home.html
@@ -30,33 +30,13 @@
               <img src="" alt="">Add User</a>
          </div>
          <div class="table-main">
-             <table id="display" class="table">
-                 <tr>
-                     <th></th>
-                     <th>Name</th>
-                     <th>Gender</th>
-                     <th>Department</th>
-                     <th>Salary</th>
-                     <th>Start Date</th>
-                     <th>Actions</th>
-                 </tr>
-                 <tr>
-                     <td><img class="profile" alt="" src="../assets/Ellipse -2.png"></td>
-                     <td>Saket Jain</td>
-                     <td>Male</td>
-                     <td><div class="dept-label">HR</div>
-                          <div class="dept-label">Finance</div></td>
-                     <td>300000</td>
-                     <td>1 April 2021</td> 
-                     <td>
-                         <img id="1" onclick="remove(this)" alt="delete"
-                               src="">
-                         <img id="1" alt="edit" onclick="update(this)"
-                               src="">
-                     </td>               
-                 </tr>
+             <table id="table-display" class="table">
              </table>
          </div>
      </div>
+     <script src="../js/home.js"></script>
+     <script src="../js/utility.js"></script>
+     <script src="../js/site_properties.js"></script>
+     <script src="../js/EmployeePayroll.js"></script>
  </body>
 </html>
