--- a/pages/home.html
+++ b/pages/home.html
@@ -24,7 +24,7 @@
      <div class="main-content">
          <div class="header-content">
              <div class="emp-detail-text">
-                 Employee Details <div class="emp-count">10</div>
+                 Employee Details <div class="emp-count"></div>
              </div>
              <a href="../pages/payroll_form.html" class="add-button">
               <img src="" alt="">Add User</a>
