Adding delete part in remove icon

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -160,5 +160,5 @@
 </body>
 <script src="../js/EmployeePayroll.js"></script>
 <script src="../js/payroll_form_js.js"></script>
-
+<script src="../js/site_properties.js"></script>
 </html>
