Adding Edit function

--- a/pages/home.html
+++ b/pages/home.html
@@ -38,5 +38,6 @@
      <script src="../js/utility.js"></script>
      <script src="../js/site_properties.js"></script>
      <script src="../js/EmployeePayroll.js"></script>
+     <script src="../js/payroll_form_js.js"></script>
  </body>
 </html>
