--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -161,4 +161,5 @@
 <script src="../js/EmployeePayroll.js"></script>
 <script src="../js/payroll_form_js.js"></script>
 <script src="../js/site_properties.js"></script>
+<script src="../js/home.js"></script>
 </html>
