--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -162,4 +162,5 @@
 <script src="../js/payroll_form_js.js"></script>
 <script src="../js/site_properties.js"></script>
 <script src="../js/home.js"></script>
+<script src="../js/utility.js"></script>
 </html>
