--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <div class="form-content">
-    <form class="form" action="#" onsubmit="save()" onreset="resetForm()">
+    <form class="form" action="#" onsubmit="save(event)" onreset="resetForm()">
         <div class="form-head">
             Employee Payroll Form
         </div>
@@ -145,7 +145,7 @@
         </div>
         <div class="row-content">
             <label class="label text" for="notes">Notes</label>
-            <textarea id="notes" class="input" name="Notes" placeholder="Write about yourself.."
+            <textarea id="notes" class="input" name="notes" placeholder="Write about yourself.."
                       style="height: 100px"></textarea>
         </div>
         <div class="button-content">
