--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -149,7 +149,7 @@
                       style="height: 100px"></textarea>
         </div>
         <div class="button-content">
-            <a href="./home.html" class=" button cancelButton">Cancel</a>
+            <a href="./home.html"  id="cancelButton" class=" button cancelButton">Cancel</a>
             <div class="submit-reset">
                 <button type="submit" class="button submitButton"  id="submitButton">Submit</button>
                 <button type="reset" class="resetButton button">Reset</button>
@@ -158,7 +158,6 @@
     </form>
     </div>
 </body>
-<script src="../js/EmployeePayroll.js"></script>
 <script src="../js/payroll_form_js.js"></script>
 <script src="../js/site_properties.js"></script>
 <script src="../js/home.js"></script>
