Refactor app as a client server architecture and retrieve data from JSON server

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -6,6 +6,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payroll_form_css.css">
     <title>Employee payroll form</title>
+    <script src="../js/payroll_form_js.js"></script>
+<script src="../js/site_properties.js"></script>
+<script src="../js/home.js"></script>
+<script src="../js/utility.js"></script>
+<script src="../js/ajaxService.js"></script>
+
    </head>
 <body>
     <header class="header-content header">
@@ -158,8 +164,4 @@
     </form>
     </div>
 </body>
-<script src="../js/payroll_form_js.js"></script>
-<script src="../js/site_properties.js"></script>
-<script src="../js/home.js"></script>
-<script src="../js/utility.js"></script>
 </html>
